search bar z-index issue solve

--- a/sass/modules/_search_bar.scss
+++ b/sass/modules/_search_bar.scss
@@ -16,7 +16,7 @@
     justify-content: center;
     overflow-y: scroll;
     transition: all .6s ease-out;
-    z-index: 9999;
+    z-index: 999999;
     &.show{
         top: 0;
     }
